organização do  codigo

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   </form>
   <ul id="lista-clientes"></ul>
 
-  <script src="scripts.js"></script>
+  <script type="module" src="scripts.js"></script>
 </body>
 </html>
